# incubyte-sm-kata-yashsinghviwork

./: .gitignore  Dockerfile  README.md  pyproject.toml  salary-kata-EXERCISE.md
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  schemas.py
app/routers/: employees.py  metrics.py  salary.py
tests/: conftest.py  test_employee_crud.py  test_salary_calculation.py  test_salary_metrics.py
