[project]
name = "incubyte-sm-kata-yashsinghviwork"
version = "0.1.0"
description = "FastAPI salary management API with employee CRUD, tax deductions, and salary metrics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
